# flask-web-poetry

./: .env.example  README.md  app.py  config.py  pyproject.toml
.github/workflows/: pipeline.yaml
flask_web_poetry/: __init__.py
flask_web_poetry/entities/: category_entity.py  product_entity.py  profile_entity.py  user_entity.py
flask_web_poetry/forms/category/: create_update_form.py
flask_web_poetry/forms/product/: create_form.py  update_form.py
flask_web_poetry/forms/user/: login_form.py  profile_form.py  register_form.py
flask_web_poetry/interfaces/: category_interface.py  product_interface.py  user_interface.py
flask_web_poetry/models/: category_model.py  product_model.py  user_model.py
flask_web_poetry/repositories/: category_repository.py  product_repository.py  user_repository.py
flask_web_poetry/routes/: category_route.py  errors_route.py  home_route.py  product_route.py  user_route.py
flask_web_poetry/services/: category_service.py  home_service.py  product_service.py  user_service.py
flask_web_poetry/templates/: base.html  home.html
flask_web_poetry/templates/category/: create_category.html  edit_category.html  list_categories.html
flask_web_poetry/templates/errors/: error_404.html
flask_web_poetry/templates/layouts/: config_head.html  config_js.html  header.html  sidebar.html
flask_web_poetry/templates/product/: create_product.html  edit_product.html  list_products.html
flask_web_poetry/templates/user/: login.html  profile.html  register.html
flask_web_poetry/tests/: test_app.py
flask_web_poetry/utils/: storage.py
